Included normalize css

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Wearism</title>
+
+    <link rel="stylesheet" href="../src/assets/css/normalize.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
